<resources>
    <string name="app_name">Memorandum</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">List</string>
    <string name="tab_text_2">Map</string>
    <string name="label_memo_title">Memo Title</string>
    <string name="label_memo_desc">Memo Description</string>
    <string name="geocode_location">Geocode Location</string>
    <string name="btn_add">Add</string>
    <string name="choose_date_time"><![CDATA[Choose Date & Time]]></string>
    <string name="label_memo_location">Memo Location</string>

    <string name="memorandum_shared_prefs">io.github.davoleo.barcodestock.BARCODE_STOCK_PREFERENCES</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Sorting Preference -->
    <string name="sorting_header">Sorting</string>
    <string name="sorting_direction_title">Memo Sorting Direction</string>

    <!-- Sync Preferences -->
    <string name="sync_header">Sync</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_remove_memo">Remove Memo</string>
    <string name="action_show_details">Show Details</string>

    <string name="memo_geofence_entered_notification">You entered %1$s\'s memo location, click here to read more.</string>
    <string name="location_permission_rationale">This App needs location permission to notify you whenever you enter an active memo location</string>
    <string name="location_radius_setting">Location Notify Radius</string>
    <string name="notification_header">Notifications</string>
</resources>