<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        tools:context=".ui.MemoAddActivity"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_layout"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/label_memo_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txb_title"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/desc_layout"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/label_memo_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:inputType="textMultiLine"
                android:id="@+id/txb_desc"
                android:textAllCaps="false"
                android:importantForAutofill="no"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/choose_date_time"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|top"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="250dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/label_memo_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txb_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:targetApi="o"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:layout_marginTop="5dp"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/ic_location_searching"
                android:contentDescription="@string/geocode_location"
                android:id="@+id/button_geocode"
                android:foreground="?attr/selectableItemBackgroundBorderless"

                android:background="@drawable/rounded_corners" />

        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:text="@string/btn_add"
            android:layout_width="189dp"
            android:layout_height="60dp"
            android:id="@+id/button_add"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

</ScrollView>